@@ -1,6 +1,8 @@
 package com.group2.restaurantorderingwebapp.service.impl;
 
 import com.group2.restaurantorderingwebapp.dto.request.UserRequest;
+import com.group2.restaurantorderingwebapp.dto.response.ApiResponse;
+import com.group2.restaurantorderingwebapp.dto.response.PageCustom;
 import com.group2.restaurantorderingwebapp.dto.response.UserResponse;
 import com.group2.restaurantorderingwebapp.entity.Role;
 import com.group2.restaurantorderingwebapp.entity.User;
@@ -12,6 +14,7 @@ import com.group2.restaurantorderingwebapp.repository.UserRepository;
 import com.group2.restaurantorderingwebapp.service.UserService;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
@@ -33,48 +36,62 @@ public class UserServiceImpl implements UserService {
     @Override
     public UserResponse createUser(UserRequest userRequest) {
         User user = modelMapper.map(userRequest, User.class);
-        if (userRepository.existsByEmail(userRequest.getEmail()))
-        {
-            throw new AppException(ErrorCode.USER_EXISTED);
+        if (userRequest.getEmail()!=null && userRepository.existsByEmail(userRequest.getEmail())){
+            throw new AppException(ErrorCode.EMAIL_EXISTED);
         }
-        user.setStatus(true);
+        if (userRequest.getPhoneNumber()!=null && userRepository.existsByPhoneNumber(userRequest.getPhoneNumber())){
+            throw new AppException(ErrorCode.PHONE_EXISTED);
+        }
+
+
         Set<Role> roles = new HashSet<>();
-        Role role = roleRepository.findByRole("ROLE_USER").orElseThrow(()->new ResourceNotFoundException("role","role's name","ROLE_USER"));
+        Role role = roleRepository.findByRoleName("ROLE_USER").orElseThrow(()->new ResourceNotFoundException("role","role's name","ROLE_USER"));
         roles.add(role);
         user.setRoles(roles);
-        return modelMapper.map(userRepository.save(user),UserResponse.class);
+
+        user = userRepository.save(user);
+        String username = userRequest.getFirstName()+user.getUserId();
+        user.setUsername(username);
+        userRepository.save(user);
+
+        return modelMapper.map(user, UserResponse.class);
     }
 
     @Override
-    public UserResponse getUserById(Long id) {
-        User user = userRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("User", "id", id));
+    public UserResponse getUserById(Long userId) {
+        User user = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException("User", "id", userId));
         return modelMapper.map(user, UserResponse.class);
     }
 
     @Override
     public UserResponse getUserByUsername(String username) {
-        User user = userRepository.findByEmailOrPhoneNumber(username,username).orElseThrow(() -> new ResourceNotFoundException("User", "username", username));
+        User user = userRepository.findByUsername(username).orElseThrow(() -> new ResourceNotFoundException("User", "username", username));
         return modelMapper.map(user, UserResponse.class);
     }
 
     @Override
-    public List<UserResponse> getAllUser(int pageNo, int pageSize, String sortBy, String sortDir) {
-        Sort sort = sortDir.equalsIgnoreCase(Sort.Direction.ASC.name())? Sort.by(sortBy).ascending():Sort.by(sortBy).descending();
-        Pageable pageable = PageRequest.of(pageNo,pageSize,sort);
-        return userRepository.findAll(pageable).stream().map(result -> modelMapper.map(result,UserResponse.class)).collect(Collectors.toList());
+    public PageCustom<UserResponse> getAllUser(Pageable pageable) {
+        Page<User> page = userRepository.findAll(pageable);
+        PageCustom<UserResponse> pageCustom = PageCustom.<UserResponse>builder()
+                .pageNo(page.getNumber())
+                .pageSize(page.getSize())
+                .totalPages(page.getTotalPages())
+                .pageContent(page.getContent().stream().map(user->modelMapper.map(user, UserResponse.class)).toList())
+                .build();
+        return pageCustom;
     }
 
     @Override
-    public UserResponse updateUser(Long id, UserRequest userRequest) {
-        User user = userRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("User", "id", id));
+    public UserResponse updateUser(Long userId, UserRequest userRequest) {
+        User user = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException("User", "id", userId));
         modelMapper.map(userRequest, user);
         return modelMapper.map(userRepository.save(user),UserResponse.class);
     }
 
     @Override
-    public String deleteUser(Long id) {
-        User user = userRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("User", "id", id));
-        return "User with id: " +id+ " was deleted successfully";
+    public String deleteUser(Long userId) {
+        User user = userRepository.findById(userId).orElseThrow(() -> new ResourceNotFoundException("User", "id", userId));
+        return "User with id: " +userId+ " was deleted successfully";
     }
 }
 
